<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddToDoActivity">

    <LinearLayout
        android:id="@+id/action_bar1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/pink"
        android:padding="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="20sp"
            android:text="@string/add_to_do"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:paddingStart="20sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <EditText
        android:id="@+id/todo_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="15sp"
        android:background="@drawable/edit_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:hint="@string/to_do_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="20sp"
        android:paddingStart="20sp"
        tools:ignore="RtlSymmetry"
        android:textColor="@color/black"
        android:textColorHint="@color/gray2"
        app:layout_constraintBottom_toTopOf="@id/todo_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/todo_description"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15sp"
        android:background="@drawable/edit_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:hint="@string/to_do_description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="20sp"
        android:paddingStart="20sp"
        tools:ignore="RtlSymmetry"
        android:textColor="@color/black"
        android:textColorHint="@color/gray2"
        app:layout_constraintBottom_toTopOf="@id/to_do_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todo_name"
        app:layout_constraintWidth_percent="0.8" />

    <LinearLayout
        android:id="@+id/to_do_spinner"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15sp"
        android:background="@drawable/edit_background"
        android:hint="@string/to_do_name"
        app:layout_constraintBottom_toTopOf="@id/todo_creation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todo_description"
        app:layout_constraintWidth_percent="0.8" >

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_spinner"
            android:id="@+id/todo_degree"/>

    </LinearLayout>

    <EditText
        android:id="@+id/todo_creation"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15sp"
        android:background="@drawable/edit_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:hint="@string/to_do_creation_time"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="20sp"
        android:paddingStart="20sp"
        tools:ignore="RtlSymmetry"
        android:textColor="@color/black"
        android:textColorHint="@color/gray2"
        app:layout_constraintBottom_toTopOf="@id/todo_dedline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/to_do_spinner"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/todo_dedline"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="15sp"
        android:background="@drawable/edit_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:hint="@string/to_do_dedline"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="20sp"
        android:paddingStart="20sp"
        tools:ignore="RtlSymmetry"
        android:textColor="@color/black"
        android:textColorHint="@color/gray2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todo_creation"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:layout_constraintWidth_percent="0.35">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>